--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "helper",
     "plugin"
   ],
-  "author": "Daniel Hollenbeck",
+  "author": "Daniel Hollenbeck <dan@hollenbecks.com> (https://github.com/dhollenbeck)",
   "license": "MIT"
 }
